# graniny_gorki

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
assets/: ground_truth.csv
assets/annotation_interface/: assembled_comments_human.xlsx  assembled_comments_humans.xlsm  assembled_comments_llm.xlsx  assembled_comments_llms.xlsm  complete_version.xlsm  empty_version.xlsm
assets/context_access_observations/: runs.xlsx
assets/iaa/: piloting_colleague_completed.csv
assets/limesurvey/: limesurvey_survey_569472.txt
assets/original_annotations/: ma_era_wth_lores.xlsx
assets/qual analysis/: assemble_comments.py
cost/: calculate_crowdworkers_time.py  claude_api_cost_2025_08.csv  cost_time_stats.csv  explanations.html  explanations.qmd
notebooks/: .vdoc.08accee6-4ca9-444d-8d90-aabd67cc3930.py  .vdoc.1d995af1-fad9-449a-947c-52cc3dc4c62f.py  .vdoc.7b58037b-1c8c-48f6-a8db-ad568a525047.py  .vdoc.8c276efe-3955-4f94-a609-2c70ac21eab1.py  .vdoc.9de0de1e-1dd9-4300-bf4f-603794cb8ce7.py  .vdoc.cd9a29e6-a63c-4c17-9aa2-33137c74edec.py  article.docx  article.qmd  bibliography.bib  discarded.html  discarded.qmd  process_raw_data.html  process_raw_data.py  process_raw_data.qmd  results.docx  results.html  results.qmd  results.quarto_ipynb  results.quarto_ipynb_1
planning/: interpretation_critique_notes.txt
raw_data/Humans/non-linguists_control/: results-blockA.csv  results-blockB.csv  results-blockC.csv  results-blockD.csv
raw_data/Humans/pilot/: participant_11_annotated.csv  participant_11_annotated.xlsm  (+12 more)
scripts/: calc_accuracy_humans.py  iaa_calculation.py
(+161 files in other folders)
