[tool.poetry]
name = "graniny-gorki"
version = "0.1.0"
description = ""
authors = ["Smogshaik <github@smog.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
jupyter = "^1.1.1"
num2words = "^0.5.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
